--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,7 +53,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           fail_on_unmatched_files: false
 
-  # macOS 构建
+  # Mac 构建
   build-macos:
     name: Build for macOS
     runs-on: macos-latest
@@ -73,13 +73,23 @@ jobs:
       - name: Install Dependencies
         run: pnpm install
         
+      # 添加 Rosetta 2 支持
+      - name: Install Rosetta 2
+        run: softwareupdate --install-rosetta --agree-to-license
+        
       - name: Build Electron App
         run: pnpm run build
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
-      - name: Build macOS Package
-        run: pnpm run build:mac
+      # 分别构建 Intel 和 ARM 版本
+      - name: Build macOS Intel Package
+        run: pnpm run build:mac --x64
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          
+      - name: Build macOS ARM Package
+        run: pnpm run build:mac --arm64
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
