--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,9 +48,7 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
-            dist/*.exe
-            dist/latest*.yml
-            !dist/*.blockmap
+            dist/*.*
           token: ${{ secrets.GITHUB_TOKEN }}
           fail_on_unmatched_files: false
 
@@ -102,9 +100,7 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
-            dist/*.dmg
-            dist/*.zip
-            !dist/*.blockmap
+            dist/*.*
           token: ${{ secrets.GITHUB_TOKEN }}
           fail_on_unmatched_files: false
 
@@ -146,10 +142,7 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
-            dist/*.AppImage
-            dist/*.deb
-            dist/*.rpm
-            !dist/*.blockmap
+            dist/*.*
           token: ${{ secrets.GITHUB_TOKEN }}
           fail_on_unmatched_files: false
 
