--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -1,8 +1,10 @@
 appId: com.ez2cursor.app
 productName: ez-cursor-free
+copyright: Copyright © Soleil 2025
 directories:
   buildResources: build
 files:
+  - "out/**"
   - '!**/.vscode/*'
   - '!src/*'
   - '!electron.vite.config.{js,ts,mjs,cjs}'
@@ -14,6 +16,7 @@ asarUnpack:
   - resources/**
 win:
   executableName: ez-cursor-free
+  icon: build/icons/512x512.png
   # 构建类型
   target:
     # 安装版
@@ -30,6 +33,8 @@ nsis:
   # 是否允许用户更改安装目录
   allowToChangeInstallationDirectory: true
 mac:
+  executableName: ez-cursor-free
+  icon: build/icons/512x512.png
   entitlementsInherit: build/entitlements.mac.plist
   extendInfo:
     - NSCameraUsageDescription: Application requests access to the device's camera.
@@ -59,6 +64,7 @@ dmg:
   sign: false
 linux:
   executableName: ez2cursorfree
+  icon: build/icons/512x512.png
   target:
     - pacman
     - AppImage
@@ -66,7 +72,7 @@ linux:
     - rpm
     - tar.gz
   category: Utility
-  artifactName: "${productName}-${version}.${ext}"
+  maintainer: galacticdevops.github.io
 appImage:
   artifactName: ${name}-${version}.${ext}
 npmRebuild: false
