--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ez-cursor-free",
-  "version": "1.0.1-beta3",
+  "version": "1.0.2",
   "description": "Ez2 Use Cursor Free Tools",
   "main": "./out/main/index.js",
   "author": "Soleil",
