--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ez-cursor-free",
-  "version": "1.0.6",
+  "version": "1.0.6-alpha1",
   "description": "Ez2 Use Cursor Free Tools",
   "main": "./out/main/index.js",
   "author": "Soleil",
