--- a/.github/ISSUE_TEMPLATE/documentation_related.yml
+++ b/.github/ISSUE_TEMPLATE/documentation_related.yml
@@ -18,7 +18,7 @@
 name: Documentation Related
 title: "[Doc] Documentation Related "
 description: I find some issues related to the documentation.
-labels: [ "type: documentation" ]
+labels: [documentation]
 body:
   - type: markdown
     attributes:
